--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
         allow-prereleases: true
         cache: pip
-        cache-dependency-path: pyproject.toml
+        cache-dependency-path: setup.py
     - name: Install dependencies
       run: pip install -e .[test]
     - name: Test with pytest
