--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,9 +22,11 @@ jobs:
         allow-prereleases: true
         cache: pip
         cache-dependency-path: setup.py
+    - name: Install system dependencies
+      run: sudo apt-get install xvfb x11-apps
     - name: Install dependencies
       run: |
         pip install pytest
         pip install -e .
     - name: Test with pytest
-      run: pytest
+      run: xvfb-run pytest
